--- a/src/main/resources/templates/html/projects.html
+++ b/src/main/resources/templates/html/projects.html
@@ -152,7 +152,11 @@
     </div>
 </main>
 
-
+<script>
+    fetch('http://localhost:8080/api/v1/projects')
+        .then(response => response.json())
+        .then(data => console.log(data));
+</script>
 
 </body>
 </html>
