--- a/src/main/resources/templates/form/tasks.html
+++ b/src/main/resources/templates/form/tasks.html
@@ -44,10 +44,8 @@
                 <div class="logo"><i class="fas fa-clipboard-check"></i></div>
                 <h1 class="title">Lista de tareas de: <span class="title-tag-element" th:text="${project.name}"></span></h1>
             </div>
-
             <div class="action-page">
-                <a class="main-btn" href="/tasks/create">Crear tarea</a>
-
+                <a class="main-btn" th:href="@{'/projects/'+${project.id}+'/tasks/create'}" >Crear tarea</a>
             </div>
         </header>
         <!---Finish - Header component -->
