--- a/src/main/resources/templates/html/projects.html
+++ b/src/main/resources/templates/html/projects.html
@@ -15,8 +15,9 @@
             align-items: center;
         }
 
-        .title-card span{
+        .title-card span,  .title-card a{
             font-size: 18px;
+            color: color: #2A3753;
         }
     </style>
 
