--- a/src/main/resources/templates/html/login.html
+++ b/src/main/resources/templates/html/login.html
@@ -16,19 +16,19 @@
 <!--- Begin - Top menu -->
 <nav class="menu-top">
     <div class="logo">
-        <a href="/">SoftTracker</a>
+        <a href="/"><img src="http://127.0.0.1:5502/img/Logo-final.png" /></a>
     </div>
     <div class="menu">
         <ul class="module">
-            <li><a href="http://" class="active">Proyectos</a></li>
-            <li><a href="http://">Tareas</a></li>
-            <li><a href="http://">Bugs</a></li>
+            <li><a th:href="@{/}" href="/" class="active">Proyectos</a></li>
+            <li><a th:href="@{/tasks}" href="/tasks">Tareas</a></li>
+            <li><a th:href="@{/bugs}" href="http://">Bugs</a></li>
         </ul>
     </div>
     <div class="login-section">
         <ul>
             <li><a href="http://" class="language"><i class="fas fa-globe-americas"></i> ES</a></li>
-            <li><a href="http://"><i class="fas fa-user"></i> Iniciar sesión</a></li>
+            <li sec:authorize="isAuthenticated()"><a th:href="@{/registration}"> <i class="fas fa-sign-out-alt"></i> Registrate</a> </li>
         </ul>
     </div>
 </nav>
