--- a/src/main/resources/templates/html/projects.html
+++ b/src/main/resources/templates/html/projects.html
@@ -29,19 +29,20 @@
 <!--- Begin - Top menu -->
 <nav class="menu-top">
     <div class="logo">
-        <a href="/">SoftTracker</a>
+        <a href="/"><img src="http://127.0.0.1:5502/img/Logo-final.png" /></a>
     </div>
     <div class="menu">
         <ul class="module">
-            <li><a th:href="@{/}" class="active">Proyectos</a></li>
-            <li><a th:href="@{/tasks}">Tareas</a></li>
-            <li><a href="http://">Bugs</a></li>
+            <li><a th:href="@{/}" href="/" class="active">Proyectos</a></li>
+            <li><a th:href="@{/tasks}" href="/tasks">Tareas</a></li>
+            <li><a th:href="@{/bugs}" href="http://">Bugs</a></li>
         </ul>
     </div>
     <div class="login-section">
         <ul>
             <li><a href="http://" class="language"><i class="fas fa-globe-americas"></i> ES</a></li>
-            <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}"> <i class="fas fa-user"></i> Cerrar sesión</a> </li>
+            <li><a th:href="@{/account}"> <i class="fas fa-user"></i> Perfil</a> </li>
+            <li sec:authorize="isAuthenticated()"><a th:href="@{/logout}"> <i class="fas fa-sign-out-alt"></i> Cerrar sesión</a> </li>
         </ul>
     </div>
 </nav>
@@ -82,7 +83,7 @@
         <!---Finish - filter component-->
 
         <section class="card-container">
-            <div class="row">
+            <div class="row" id="project-list">
 
                 <!---Begin: Card project  -->
                 <div class="card col-md-4" th:each="project : ${listProjects}">
@@ -153,10 +154,36 @@
     </div>
 </main>
 
+<div class="loader">
+    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="margin: auto; background: rgba(255, 255, 255, 0); display: block;" width="200px" height="200px" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid">
+        <circle cx="50" cy="50" fill="none" stroke="#1b5887" stroke-width="10" r="35" stroke-dasharray="164.93361431346415 56.97787143782138">
+            <animateTransform attributeName="transform" type="rotate" repeatCount="indefinite" dur="1s" values="0 50 50;360 50 50" keyTimes="0;1"></animateTransform>
+        </circle>
+    </svg>
+</div>
+
+<script>
+    const loader = document.querySelector('.loader');
+    setTimeout(function(){
+        loader.style.display = 'none';
+    }, 2000);
+</script>
+
+
+<script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+
 <script>
     fetch('http://localhost:8080/api/v1/projects')
         .then(response => response.json())
         .then(data => console.log(data));
+
+    const projectList = document.getElementById('project-list');
+    Sortable.create(
+        projectList,{
+            animation: 100
+        }
+    )
+
 </script>
 
 </body>
