--- a/src/main/resources/templates/html/signup.html
+++ b/src/main/resources/templates/html/signup.html
@@ -15,19 +15,19 @@
 <!--- Begin - Top menu -->
 <nav class="menu-top">
     <div class="logo">
-        <a href="/">SoftTracker</a>
+        <a href="/"><img src="http://127.0.0.1:5502/img/Logo-final.png" /></a>
     </div>
     <div class="menu">
         <ul class="module">
-            <li><a th:href="@{/}" class="active">Proyectos</a></li>
-            <li><a th:href="@{/tasks}">Tareas</a></li>
-            <li><a href="http://">Bugs</a></li>
+            <li><a th:href="@{/}" href="/" class="active">Proyectos</a></li>
+            <li><a th:href="@{/tasks}" href="/tasks">Tareas</a></li>
+            <li><a th:href="@{/bugs}" href="http://">Bugs</a></li>
         </ul>
     </div>
     <div class="login-section">
         <ul>
             <li><a href="http://" class="language"><i class="fas fa-globe-americas"></i> ES</a></li>
-            <li><a href="http://"><i class="fas fa-user"></i> Iniciar sesión</a></li>
+            <li sec:authorize="isAuthenticated()"><a th:href="@{/login}"> <i class="fas fa-sign-out-alt"></i> Iniciar sesión</a> </li>
         </ul>
     </div>
 </nav>
@@ -50,14 +50,14 @@
                 <div class="form-group">
                     <label for="">Nombre <span style="color: red;">*</span></label>
                     <div class="form-control">
-                        <input type="type" name="name" id="firstName" placeholder="Nombre de usuario" th:field="*{firstName}" required>
+                        <input type="text" name="name" id="firstName" placeholder="Nombre de usuario" th:field="*{firstName}" required>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label for="">Apellido</label>
                     <div class="form-control">
-                        <input type="type" th:field="*{lastName}" name="lastName" id="lastName" placeholder="Apellido del usaurio">
+                        <input type="text" th:field="*{lastName}" name="lastName" id="lastName" placeholder="Apellido del usaurio">
                     </div>
                 </div>
 
