Update de last version

--- a/src/main/resources/templates/form/all-tasks.html
+++ b/src/main/resources/templates/form/all-tasks.html
@@ -60,10 +60,14 @@
                     </select>
                     <button class="search-icon" id="searchBtn"><i class="fas fa-search"></i></button>
                 </div>
+                <div class="search-form">
+                    <input type="text" id="taskFilterInput" name="taskFilterInput" style="margin-bottom: 5px" placeholder="Buscar por nombre">
+                </div>
                 <div class="filter-handle">
-                    <input type="checkbox" name="" id="">
+                    <input type="checkbox" name="check" value="check" id="activeCheckBox">
                     <label for="">Mostrar solo activos</label>
                 </div>
+
             </div>
 
             <input type="hidden" id="idProject" name="id" value="1">
