--- a/src/main/resources/templates/form/tasks.html
+++ b/src/main/resources/templates/form/tasks.html
@@ -57,10 +57,10 @@
             <div class="form">
                 <div class="search-form">
                     <button class="search-icon"><i class="fas fa-search"></i></button>
-                    <input type="text" placeholder="Buscar">
+                    <input type="text" id="taskFilterInput" name="taskFilterInput" placeholder="Buscar">
                 </div>
                 <div class="filter-handle">
-                    <input type="checkbox" name="" id="">
+                    <input type="checkbox" name="check" value="check" id="activeCheckBox">
                     <label for="">Mostrar solo activos</label>
                 </div>
             </div>
