--- a/src/main/resources/templates/html/login.html
+++ b/src/main/resources/templates/html/login.html
@@ -53,7 +53,7 @@
                 <div class="form-group">
                     <label for=""><i class="fas fa-user"></i> Correo electrónico</label>
                     <div class="form-control">
-                        <input type="text" class = "form-control" id ="username" name = "username"
+                        <input autocomplete="off" type="text" class = "form-control" id ="username" name = "username"
                                placeholder="Ej: nombre@correo.com" autofocus="autofocus">
                     </div>
                 </div>
