--- a/src/main/resources/templates/form/task-form.html
+++ b/src/main/resources/templates/form/task-form.html
@@ -87,7 +87,7 @@
                     <div class="form-group">
                         <label for="">Nombre de la tarea <span style="color: red;">*</span></label>
                         <div class="form-control">
-                            <input type="text" class="form-control" th:field="*{name}" placeholder="Nombre de la tarea">
+                            <input autocomplete="off" type="text" class="form-control" th:field="*{name}" placeholder="Nombre de la tarea">
                         </div>
                     </div>
 
